--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -6,10 +6,11 @@
   width: 100%;
   left: 0;
   top: 0;
-  z-index: 2;
+  z-index: 1;
 
   &--opened {
     position: absolute;
+    z-index: 2;
   }
 
   @media (min-width: @tablet-width) {
@@ -17,7 +18,7 @@
     font-size: 14px;
     line-height: 21px;
     position: relative;
-    z-index: 1;
+    z-index: 3;
   }
 }
 
